--- a/app/blocks/form-elements/form-selects.scss
+++ b/app/blocks/form-elements/form-selects.scss
@@ -594,7 +594,7 @@
           font-weight: 400;
           padding: 0 6px;
 
-          &[data-value="placeholder"] {
+          &[data-value=""] {
             display: none;
           }
         }
@@ -716,7 +716,7 @@
           font-weight: 400;
           padding: 0 6px;
 
-          &[data-value="placeholder"] {
+          &[data-value=""] {
             display: none;
           }
         }
