--- a/app/components/condition-search/condition-search.pug
+++ b/app/components/condition-search/condition-search.pug
@@ -12,20 +12,20 @@ mixin condition-search()
         +e.selects
           +e.select.hide-from-sm
             +select.js-select-color(name="workplace-type")
-              option(value="placeholder" placeholder) Workplace type
+              option(value="" placeholder) Workplace type
               option(value="htdsk") Hot Desk
               option(value="dddsk") Dedicated Desk
               option(value="room") Meeting Room
               option(value="space") Office Space
           +e.select
             +select.js-select-light(name="city")
-              option(value="placeholder" placeholder) City
+              option(value="" placeholder) City
               option(value="London" selected) London
               option(value="Paris") Paris
               option(value="Moscow") Moscow
           +e.select_wide
             +select.js-select-light(name="area")
-              option(value="placeholder" placeholder) Select area
+              option(value="" placeholder) Select area
               option(value="Central London") Central London
               option(value="Stratford Area") Stratford Area
               option(value="Canary Warf") Canary Warf
