--- a/app/components/filter/filter.pug
+++ b/app/components/filter/filter.pug
@@ -3,13 +3,13 @@ mixin filter()
     +e.FORM.form(data-form="location-filter-big")
       +e.wrapper
         +select.js-select-dark(name="city")
-          option(value="placeholder" placeholder) City
+          option(value="" placeholder) City
           option(value="London" selected) London
           option(value="Paris") Paris
           option(value="Moscow") Moscow
       +e.wrapper
         +select.js-select-dark(name="area")
-          option(value="placeholder" placeholder) Areas
+          option(value="" placeholder) Areas
           option(value="Central London") Central London
           option(value="Stratford Area") Stratford Area
           option(value="Canary Warf") Canary Warf
@@ -18,7 +18,7 @@ mixin filter()
           option(value="Richmond") Richmond
       +e.wrapper
         +select.js-select-dark(name="tube-station")
-          option(value="placeholder" placeholder) Tube Stations
+          option(value="" placeholder) Tube Stations
           option(value="Canary Warf") Canary Warf
           option(value="dddsk") Victoria Station
           option(value="Victoria Station") Campden town
@@ -29,7 +29,7 @@ mixin filter()
           option(value="Richmond") Richmond
       +e.wrapper
         +select.js-select-dark(name="workplace-type")
-          option(value="placeholder" placeholder) Workplace type
+          option(value="" placeholder) Workplace type
           option(value="htdsk") Hot Desk
           option(value="dddsk") Dedicated Desk
           option(value="room") Meeting Room
@@ -41,13 +41,13 @@ mixin filter-search()
     +e.content
       +e.wrapper.hide-sm
         +select.js-select-dark2(name="city" readonly style="width: 76px;")
-          option(value="placeholder" placeholder) City
+          option(value="" placeholder) City
           option(value="London" selected) London
           option(value="Paris") Paris
           option(value="Moscow") Moscow
       +e.wrapper.hide-md
         +select.js-select-dark2(name="area" style="width: 56px;")
-          option(value="placeholder" placeholder) Area
+          option(value="" placeholder) Area
           option(value="Central London") Central London
           option(value="Stratford Area") Stratford Area
           option(value="Canary Warf") Canary Warf
