--- a/app/components/location/location.pug
+++ b/app/components/location/location.pug
@@ -13,7 +13,7 @@ mixin location()
               +form-section-wrapper
                 +form-box('Country')._gray-label
                   +select.js-select-input(name="country")
-                    option(value="placeholder" placeholder) Country
+                    option(value="" placeholder) Country
                     option(value="uk" selected) United-Kingdom
                     option(value="lv") Latvia
                     option(value="ru") Russia
@@ -23,7 +23,7 @@ mixin location()
               +form-section-wrapper
                 +form-box('City')._gray-label
                   +select.js-select-input(name="city")
-                    option(value="placeholder" placeholder) City
+                    option(value="" placeholder) City
                     option(value="London" selected) London
                     option(value="Cambridge") Cambridge
                     option(value="Oxford") Oxford
