--- a/app/pages/account-settings/account-settings.pug
+++ b/app/pages/account-settings/account-settings.pug
@@ -31,7 +31,7 @@ block content
                   +form-section-wrapper
                     +form-box('Country')
                       +select.js-select-input(name="country" required)
-                        option(value="placeholder" placeholder) Country
+                        option(value="" placeholder) Country
                         option(value="uk" selected) United-Kingdom
                         option(value="ru") Russia
                         option(value="de") Germany
@@ -81,7 +81,7 @@ block content
                   +form-section-wrapper
                     +form-box('Residency country')
                       +select.js-select-input(name="residencyCountry")
-                        option(value="placeholder" placeholder) Residency country
+                        option(value="" placeholder) Residency country
                         option(value="lv" selected) Latvia
                         option(value="ru") Russia
                         option(value="de") Germany
@@ -90,7 +90,7 @@ block content
                   +form-section-wrapper
                     +form-box('Education grade')
                       +select.js-select-input(name="educationGrade")
-                        option(value="placeholder" placeholder) Education grade
+                        option(value="" placeholder) Education grade
                         option(value="bachelor" selected) Bachelor
                         option(value="doctor") Doctor
                         option(value="master") Master
