--- a/app/pages/new-space/new-space-step41.pug
+++ b/app/pages/new-space/new-space-step41.pug
@@ -47,7 +47,7 @@ block content
                           +e.IMG.image(src=item.img)
                         +photo-preview-error
                         +photo-preview-description(item.select)
-                          option(placeholder value="placeholder") What’s on photo?
+                          option(placeholder value="") What’s on photo?
                           option(value="Cafe") Cafe
                           option(value="Meeting room") Meeting room
                           option(value="Parking") Parking
