--- a/app/pages/new-space/new-space-step5.pug
+++ b/app/pages/new-space/new-space-step5.pug
@@ -43,7 +43,7 @@ block content
                         +form-section-wrapper._separator2
                           +form-box('Space work time from')
                             +select.js-select-input(name="workTimeFrom" required)
-                              option(value="placeholder" placeholder) Space work time from
+                              option(value="" placeholder) Space work time from
                               option(value="1:00") 1:00
                               option(value="2:00") 2:00
                               option(value="3:00") 3:00
@@ -60,7 +60,7 @@ block content
                         +form-section-wrapper
                           +form-box('Till')
                             +select.js-select-input(name="workTimeTill" required)
-                              option(value="placeholder" placeholder) Till
+                              option(value="" placeholder) Till
                               option(value="1:00") 1:00
                               option(value="2:00") 2:00
                               option(value="3:00") 3:00
