--- a/app/pages/order-checkout/order-checkout.pug
+++ b/app/pages/order-checkout/order-checkout.pug
@@ -37,7 +37,7 @@ block content
                   +form-section-wrapper
                     +form-box('Payment method')
                       +select.js-select-input(name="payment Method")
-                        option(value="placeholder" placeholder) Payment method
+                        option(value="" placeholder) Payment method
                         option(value="creditCard" selected) Credit card
                         option(value="method2") Method2
                         option(value="other") Other
