--- a/app/pages/ui-kit/ui-kit.pug
+++ b/app/pages/ui-kit/ui-kit.pug
@@ -456,7 +456,7 @@ block content
             br
             +form-box('Плейсхолдер')
               +select.js-select-input
-                option(value="placeholder" placeholder) Плейсхолдер
+                option(value="" placeholder) Плейсхолдер
                 option(value="Опция 1") Опция 1
                 option(value="Опция 2") Опция 2
                 option(value="Опция 3") Опция 3
@@ -555,21 +555,21 @@ block content
               +col(3).is-dark
                 +ui-description .js-select-light
                 +select.js-select-light
-                  option(value="placeholder" placeholder) Placeholder
+                  option(value="" placeholder) Placeholder
                   option(value="Опция 1") Опция 1
                   option(value="Опция 2") Опция 2
                   option(value="Опция 3") Опция 3
               +col(3)
                 +ui-description .js-select-dark
                 +select.js-select-dark
-                  option(value="placeholder" placeholder) Placeholder
+                  option(value="" placeholder) Placeholder
                   option(value="Опция 1") Опция 1
                   option(value="Опция 2") Опция 2
                   option(value="Опция 3") Опция 3
               +col(3).is-dark
                 +ui-description .js-select-color
                 +select.js-select-color
-                  option(value="placeholder" placeholder) Placeholder
+                  option(value="" placeholder) Placeholder
                   option(value="Опция 1") Опция 1
                   option(value="Опция 2") Опция 2
                   option(value="Опция 3") Опция 3
@@ -2133,7 +2133,7 @@ block content
                 +e.IMG.image(src="assets/images/photo-preview1.jpg")
               +photo-preview-error
               +photo-preview-description
-                option(placeholder value="placeholder") What’s on photo?
+                option(placeholder value="") What’s on photo?
                 option(value="Cafe") Cafe
                 option(value="Meeting room") Meeting room
                 option(value="Parking") Parking
@@ -2146,7 +2146,7 @@ block content
                 +e.IMG.image(src="assets/images/photo-preview1.jpg")
               +photo-preview-error
               +photo-preview-description
-                option(placeholder value="placeholder") What’s on photo?
+                option(placeholder value="") What’s on photo?
                 option(value="Cafe") Cafe
                 option(value="Meeting room") Meeting room
                 option(value="Parking") Parking
@@ -2159,7 +2159,7 @@ block content
                 +e.IMG.image(src="assets/images/photo-preview1.jpg")
               +photo-preview-error
               +photo-preview-description
-                option(placeholder value="placeholder") What’s on photo?
+                option(placeholder value="") What’s on photo?
                 option(value="Cafe") Cafe
                 option(value="Meeting room") Meeting room
                 option(value="Parking") Parking
