--- a/app/blocks/offer-select/offer-select.scss
+++ b/app/blocks/offer-select/offer-select.scss
@@ -9,7 +9,7 @@
     @include pseudo;
 
     width: 100%;
-    height: calc(100% + 327px);
+    height: calc(100% + 70px);
     top: 0;
     left: 0;
     box-shadow: 1px 1px 8px rgba(34, 42, 46, .18);
@@ -116,7 +116,6 @@
     position: absolute;
     display: block;
     width: 100%;
-    height: 326px;
     top: 100%;
     left: 0;
     margin-top: -1px;
@@ -129,15 +128,42 @@
     border-radius: 0 0 3px 3px;
     z-index: 4;
 
+    &::before {
+      @include pseudo;
+
+      width: 100%;
+      height: calc(100% - 70px);
+      top: 70px;
+      left: 0;
+      box-shadow: 1px 1px 8px rgba(34, 42, 46, .18);
+      opacity: 0;
+      pointer-events: none;
+      z-index: 0;
+      transition: opacity $ease-main;
+    }
+
     #{$b}.is-open & {
       opacity: 1;
       pointer-events: auto;
+
+      &::before {
+        opacity: 1;
+      }
     }
+  }
+
+  &__scrollblock {
+    position: relative;
+    display: block;
+    width: 100%;
+    max-height: 326px;
+    z-index: 2;
   }
 
   &__list {
     width: 100%;
     height: auto;
+    background-color: $color-white;
   }
 
   &__item {
