--- a/app/blocks/offer-select/offer-select.pug
+++ b/app/blocks/offer-select/offer-select.pug
@@ -6,10 +6,9 @@ mixin offer-select(star)
         +icon('select-arrow').__icon
       if star
         +e.star *
-    +e.dropdown
-      +e.scrollblock.js-scrollbar
-        +e.UL.list
-          block
+    +e.dropdown.js-scrollbar
+      +e.UL.list
+        block
 
 mixin offer-select-item(data)
   +e.LI.item
