--- a/app/blocks/offer-select/offer-select.scss
+++ b/app/blocks/offer-select/offer-select.scss
@@ -8,14 +8,13 @@
   &::before {
     @include pseudo;
 
-    width: 100%;
-    height: calc(100% + 70px);
-    top: 0;
-    left: 0;
-    box-shadow: 1px 1px 8px rgba(34, 42, 46, .18);
+    left: 1px;
+    bottom: 1px;
+    width: calc(100% - 2px);
+    height: 10px;
+    background-color: $color-white;
+    z-index: 5;
     opacity: 0;
-    pointer-events: none;
-    z-index: 1;
     transition: opacity $ease-main;
   }
 
@@ -34,6 +33,7 @@
     transition: box-shadow $ease-main, border $ease-main;
     overflow: hidden;
     cursor: pointer;
+    background-color: $color-white;
     z-index: 2;
 
     #{$b}:hover & {
@@ -44,7 +44,7 @@
     #{$b}.is-open & {
       border-radius: 3px 3px 0 0;
       border-color: $color-text-light;
-      box-shadow: none;
+      box-shadow: 1px 1px 8px rgba(34, 42, 46, .18);
       border-bottom-color: transparent;
     }
   }
@@ -116,6 +116,7 @@
     position: absolute;
     display: block;
     width: 100%;
+    max-height: 326px;
     top: 100%;
     left: 0;
     margin-top: -1px;
@@ -125,39 +126,14 @@
     background-color: $color-white;
     border: 1px solid $color-text-light;
     border-top-color: $color-border-light;
+    box-shadow: 1px 1px 8px rgba(34, 42, 46, .18);
     border-radius: 0 0 3px 3px;
     z-index: 4;
-
-    &::before {
-      @include pseudo;
-
-      width: 100%;
-      height: calc(100% - 70px);
-      top: 70px;
-      left: 0;
-      box-shadow: 1px 1px 8px rgba(34, 42, 46, .18);
-      opacity: 0;
-      pointer-events: none;
-      z-index: 0;
-      transition: opacity $ease-main;
-    }
 
     #{$b}.is-open & {
       opacity: 1;
       pointer-events: auto;
-
-      &::before {
-        opacity: 1;
-      }
     }
-  }
-
-  &__scrollblock {
-    position: relative;
-    display: block;
-    width: 100%;
-    max-height: 326px;
-    z-index: 2;
   }
 
   &__list {
