--- a/app/blocks/offer-select/offer-select.scss
+++ b/app/blocks/offer-select/offer-select.scss
@@ -8,14 +8,18 @@
   &::before {
     @include pseudo;
 
-    left: 1px;
-    bottom: 1px;
-    width: calc(100% - 2px);
+    left: 0;
+    bottom: 0;
+    width: 100%;
     height: 10px;
     background-color: $color-white;
     z-index: 5;
     opacity: 0;
     transition: opacity $ease-main;
+    border: 1px solid transparent;
+    border-left-color: $color-text-light;
+    border-right-color: $color-text-light;
+    border-bottom-color: $color-border-light;
   }
 
   &.is-open::before {
