add touch-action: manipulation for spoilers

--- a/app/blocks/spoiler/spoiler.scss
+++ b/app/blocks/spoiler/spoiler.scss
@@ -10,6 +10,7 @@
   transition: height $ease-main;
   will-change: height;
   overflow: hidden;
+  touch-action: manipulation;
 
   &::before {
     @include pseudo;
@@ -36,6 +37,7 @@
     width: 100%;
     z-index: 1;
     padding-bottom: 20px;
+    touch-action: manipulation;
   }
 
   &__toggle {
