--- a/app/components/offer-panel/offer-panel.scss
+++ b/app/components/offer-panel/offer-panel.scss
@@ -22,6 +22,7 @@
   &__item {
     display: block;
     width: 100%;
+    touch-action: manipulation;
 
     &:not(:last-child) {
       border-bottom: 1px solid $color-border-lighter;
@@ -31,5 +32,6 @@
   &__content {
     height: calc(100vh - 200px);
     max-height: 437px;
+    touch-action: manipulation;
   }
 }
