add multiple rules

--- a/app/blocks/form/form.scss
+++ b/app/blocks/form/form.scss
@@ -1152,6 +1152,13 @@
   }
 }
 
+[data-point-object]:last-child {
+
+  .form-box__delete {
+    display: none;
+  }
+}
+
 .error-message {
   @include text;
 
