--- a/app/components/popup-add-offer/popup-add-offer.pug
+++ b/app/components/popup-add-offer/popup-add-offer.pug
@@ -79,12 +79,12 @@ mixin popup-add-offer()
                     option(value="Week") Week
                     option(value="Month") Month
                     option(value="Year") Year
-        +form-section._mid-mg(data-deleted-group)
+        +form-section._mid-mg(data-deleted-group data-point-group)
           +form-section-header._mg21
             +form-section-title('h4')._small Points to know about this offer. (optional)
-          +form-section-wrapper._sm-mg(data-deleted-object)
+          +form-section-wrapper._sm-mg(data-deleted-object data-point-object)
             +form-box-removable('')._icon
-              +input(type="text" name="points[]" placeholder="Point").input_points
+              +input(type="text" name="points[0]" placeholder="Point").input_points
         +form-section._sm-mg
           +form-section-wrapper._noflex
             +form-box('Comment (Only you can see it)')
