--- a/app/pages/new-space/new-space-step5.pug
+++ b/app/pages/new-space/new-space-step5.pug
@@ -82,17 +82,17 @@ block content
                   +e.column_rules
                     +form-section-header._mg24
                       +form-section-title('h5')._small Basic Rule points (optional)
-                    +form-section-content()(data-deleted-group)
-                      +form-section-wrapper()._mg29(data-deleted-object)
+                    +form-section-content()(data-deleted-group data-point-group)
+                      +form-section-wrapper()._mg29(data-deleted-object data-point-object)
                         +form-box-removable('')._icon
                           +input(type="text" name="rules[0]" placeholder="Rule" value="Pets allowed").input_points
-                      +form-section-wrapper()._mg29(data-deleted-object)
+                      +form-section-wrapper()._mg29(data-deleted-object data-point-object)
                         +form-box-removable('')._icon
                           +input(type="text" name="rules[1]" placeholder="Rule" value="Entrance only by electornic key").input_points
-                      +form-section-wrapper()._mg29(data-deleted-object)
+                      +form-section-wrapper()._mg29(data-deleted-object data-point-object)
                         +form-box-removable('')._icon
                           +input(type="text" name="rules[2]" placeholder="Rule" value="Silent time from 10PM till 8 AM").input_points
-                      +form-section-wrapper()._mg29(data-deleted-object)
+                      +form-section-wrapper()._mg29(data-deleted-object data-point-object)
                         +form-box-removable('')._icon
                           +input(type="text" name="rules[3]" placeholder="Rule").input_points
                   +e.column_stretch
