--- a/app/blocks/accordion/accordion.scss
+++ b/app/blocks/accordion/accordion.scss
@@ -70,8 +70,7 @@
       border-color: $color-basic;
     }
 
-    #{$b}:hover &,
-    #{$b}.is-active & {
+    #{$b}:hover &,#{$b}.is-active & {
       border-color: $color-basic;
     }
 
@@ -80,8 +79,7 @@
       bottom: 15px;
     }
 
-    &::before,
-    &::after {
+    &::before,&::after {
       @include pseudo;
 
       width: 9px;
@@ -98,8 +96,7 @@
         background-color: $color-accordion-button;
       }
 
-      #{$b}:hover &,
-      #{$b}.is-active & {
+      #{$b}:hover &,#{$b}.is-active & {
         background-color: $color-accordion-button;
       }
     }
