--- a/app/blocks/uploader/uploader.scss
+++ b/app/blocks/uploader/uploader.scss
@@ -111,29 +111,29 @@
     background-repeat: repeat;
 
     @media only screen and (max-width: 1700px) {
-      height: calc(2 * 0.15 * (100vw - 270px));
-      background-size: calc(0.15 * (100vw - 270px)) calc(0.15 * (100vw - 270px));
+      height: calc(2 * .15 * (100vw - 270px));
+      background-size: calc(.15 * (100vw - 270px)) calc(.15 * (100vw - 270px));
     }
 
     @include screen('md') {
-      height: calc(2 * 0.2 * (100vw - 200px));
-      background-size: calc(0.2 * (100vw - 200px)) calc(0.2 * (100vw - 200px));
+      height: calc(2 * .2 * (100vw - 200px));
+      background-size: calc(.2 * (100vw - 200px)) calc(.2 * (100vw - 200px));
     }
 
     @include screen('sm') {
-      height: calc(2 * 0.2 * (100vw - 75px));
+      height: calc(2 * .2 * (100vw - 75px));
       background-image:
         linear-gradient($color-white 10px, rgba($color-white, 0) 10px),
         linear-gradient(90deg, $color-white 10px, rgba($color-white, 0) 10px);
-      background-size: calc(0.2 * (100vw - 75px)) calc(0.2 * (100vw - 75px));
+      background-size: calc(.2 * (100vw - 75px)) calc(.2 * (100vw - 75px));
     }
 
     @media only screen and (max-width: 480px) {
-      height: calc(3 * 0.2 * (100vw - 75px));
+      height: calc(3 * .2 * (100vw - 75px));
     }
 
     @media only screen and (max-width: 380px) {
-      height: calc(4 * 0.2 * (100vw - 75px));
+      height: calc(4 * .2 * (100vw - 75px));
     }
   }
 
