--- a/app/components/filter/filter.scss
+++ b/app/components/filter/filter.scss
@@ -88,9 +88,7 @@
     #{$b} {
 
       &__wrapper {
-
-        &:not(:last-child),
-        &:first-child {
+        &:not(:last-child),&:first-child {
           margin-right: 59px;
 
           @include screen('md') {
