--- a/app/components/search-filter/search-filter.scss
+++ b/app/components/search-filter/search-filter.scss
@@ -83,14 +83,14 @@
     select {
       @include text-mid;
 
-      line-height: (26/17);
+      line-height: (26 / 17);
       font-weight: 700;
       color: $color-basic;
 
       @include screen('sm') {
         @include text;
 
-        line-height: (26/14);
+        line-height: (26 / 14);
       }
     }
   }
@@ -105,13 +105,13 @@
   &__button {
     @include text-mid;
 
-    line-height: (26/17);
+    line-height: (26 / 17);
     font-weight: 700;
 
     @include screen('sm') {
       @include text;
 
-      line-height: (26/14);
+      line-height: (26 / 14);
     }
 
     &:not(:first-child) {
@@ -134,7 +134,6 @@
       }
 
       .link {
-
         &__icon {
           @include screen('sm') {
             width: 10px;
@@ -171,7 +170,7 @@
     transition: opacity $ease-main;
     z-index: 15;
     border-radius: 3px;
-    box-shadow: 1px 1px 8px rgba(34, 42, 46, 0.06);
+    box-shadow: 1px 1px 8px rgba(34, 42, 46, .06);
 
     @include screen('lg') {
       left: -20px;
