--- a/app/components/ui-kit/ui-kit.scss
+++ b/app/components/ui-kit/ui-kit.scss
@@ -61,6 +61,7 @@ $ui-kit-color-darkbg: #111;
 
       a {
         @include link;
+
         color: $color-white;
         transition: .3s;
         font-weight: 700;
@@ -74,8 +75,6 @@ $ui-kit-color-darkbg: #111;
       &:not(:last-child) {
         margin-bottom: 5px;
       }
-
-
     }
   }
 
@@ -117,7 +116,7 @@ $ui-kit-color-darkbg: #111;
       height: 100%;
     }
 
-    &+.ui-kit__name {
+    & + .ui-kit__name {
       margin-top: 20px;
     }
   }
@@ -126,7 +125,7 @@ $ui-kit-color-darkbg: #111;
     margin-top: -$grid-gap;
     font-size: 0;
 
-    >* {
+    & > * {
       margin-right: $grid-gap;
       margin-top: $grid-gap;
     }
@@ -149,12 +148,7 @@ $ui-kit-color-darkbg: #111;
       margin-bottom: 30px;
       text-align: left;
 
-      h1,
-      h2,
-      h3,
-      h4,
-      h5,
-      h6 {
+      h1,h2,h3,h4,h5,h6 {
         font-size: 30px;
         font-weight: 600;
         line-height: 1.4;
@@ -170,7 +164,7 @@ $ui-kit-color-darkbg: #111;
 
       p {
         font-size: 18px;
-        line-height: 26/18;
+        line-height: 26 / 18;
         letter-spacing: -.02em;
 
         &:not(:last-child) {
@@ -240,6 +234,7 @@ $ui-kit-color-darkbg: #111;
   }
 
   &__custom-text {
+
     &_style-1 {
       @include text;
     }
