--- a/app/styles/helpers/_animations.scss
+++ b/app/styles/helpers/_animations.scss
@@ -7,3 +7,21 @@
     opacity: 1;
   }
 }
+
+@keyframes pulseShift {
+  0% {
+    box-shadow: 0 0 2px 0 rgba(#fff, 1);
+  }
+
+  25% {
+    box-shadow: 0 0 2px 4px rgba(#fff, .75);
+  }
+
+  50% {
+    box-shadow: 0 0 2px 8px rgba(#fff, .5);
+  }
+
+  100% {
+    box-shadow: 0 0 2px 12px rgba(#fff, 0);
+  }
+}
