--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -15,43 +15,38 @@ $grid-gap: 15px; // Расстояние между колонками
 $grid-gap-vertical: 13px; // Расстояние между строками в сетке
 $grid-gap-big: 50px;
 $grid-gap-vertical-big: 60px;
-$grid-col-width: $grid-container-width/$grid-cols; // Ширина одной колонки
-$breakpoints: ('xl': 1600px,
-'lg': 1300px,
-'bg': 1160px,
-'md': 1020px,
-'sm': 768px,
-'xs': 480px);
+$grid-col-width: $grid-container-width / $grid-cols; // Ширина одной колонки
+$breakpoints: ('xl': 1600px, 'lg': 1300px, 'bg': 1160px, 'md': 1020px, 'sm': 768px, 'xs': 480px);
 
 // ##########
 // Цвета
 // ##########
 $color-basic: #525a65; // Основной цвет текста (применяется к body)
-$color-basic-light:#86919e;
+$color-basic-light: #86919e;
 $color-basic-dark: #121615;
 $color-form-light: #858c99;
 $color-arrow: #a0a7ab;
-$color-bg:#f2f6f6; // цвет фона
-$color-grey-dark:#151b25;
+$color-bg: #f2f6f6; // цвет фона
+$color-grey-dark: #151b25;
 $color-placeholder: #858c99; // Основной цвет для placeholder
 $color-input: black; // Основной цвет input, select и textarea
 $color-main: #46c2a9; // Основной фирменный цвет
 $color-border: #5a5c5c; // Основной цвет границ таблиц, секций
-$color-text-green:#2ee0c9;
-$color-gradient-one:#0caecc;
-$color-gradient-two:#30e3c9;
+$color-text-green: #2ee0c9;
+$color-gradient-one: #0caecc;
+$color-gradient-two: #30e3c9;
 $color-yellow: #ff9600;
 $color-red: #eb4433;
 $color-blue: #1dd5f0;
 $color-green: #29f785;
-$color-white: #ffffff;
+$color-white: #fff;
 $color-bc-light: #acb5c0;
-$color-bc-dark:#303333;
-$color-form-border:#c0c6cf;
+$color-bc-dark: #303333;
+$color-form-border: #c0c6cf;
 $color-border-light: #dbe1e3;
-$color-text-light:#a5b0bd;
-$color-link-border:#c1c5c5;
-$color-black: #000000;
+$color-text-light: #a5b0bd;
+$color-link-border: #c1c5c5;
+$color-black: #000;
 $color-overlay: #11151a;
 $color-header-logo: #415a65;
 $color-scroll-light: #dbe2eb;
@@ -151,6 +146,4 @@ $ease-main-short: .15s ease;
 // ##########
 // Шрифты
 // ##########
-$font-main: 'ProximaNova',
-'Arial',
-sans-serif; // Основной шрифт сайта
+$font-main: 'ProximaNova', 'Arial', sans-serif; // Основной шрифт сайта
