--- a/app/blocks/photo-preview/photo-preview.scss
+++ b/app/blocks/photo-preview/photo-preview.scss
@@ -6,6 +6,41 @@
   width: 100%;
   box-sizing: border-box;
 
+  &::before,&::after {
+    @include pseudo;
+
+    visibility: hidden;
+  }
+
+  &::before {
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: $color-black;
+    opacity: .5;
+    z-index: 5;
+  }
+
+  &::after {
+    top: 50%;
+    left: 50%;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    box-sizing: border-box;
+    border: 2px solid $color-white;
+    z-index: 6;
+    transform: translate3d(-50%, -50%, 0);
+    animation: pulseShift 1.5s ease-in-out infinite;
+  }
+
+  &.is-load {
+    &::before,&::after {
+      visibility: visible;
+    }
+  }
+
   &__delete {
     position: absolute;
     display: block;
@@ -67,11 +102,7 @@
     }
   }
 
-  &__media,
-  &__caption,
-  &__croparea,
-  &__label,
-  &__error {
+  &__media,&__caption,&__croparea,&__label,&__error {
     position: absolute;
     z-index: 2;
   }
@@ -127,8 +158,7 @@
       pointer-events: auto;
     }
 
-    #{$b}__main:checked~&,
-    #{$b}.is-error:hover & {
+    #{$b}__main:checked ~ &,#{$b}.is-error:hover & {
       opacity: 0;
       pointer-events: none;
     }
@@ -159,7 +189,7 @@
       @include text16;
     }
 
-    #{$b}__main:checked~& {
+    #{$b}__main:checked ~ & {
       opacity: 1;
     }
 
@@ -206,7 +236,7 @@
       background-image: none;
       background-color: $color-white;
       color: $color-white;
-      line-height: (26/20);
+      line-height: (26 / 20);
       font-weight: 700;
 
       @include screen('sm') {
@@ -255,7 +285,7 @@
     padding: 0 8px;
     background-color: $color-selection-text;
     box-sizing: border-box;
-    line-height: (27/20);
+    line-height: (27 / 20);
 
     @include screen('md') {
       padding: 0 4px;
@@ -274,18 +304,18 @@
     }
 
     @include screen('sm') {
-      line-height: (27/16);
+      line-height: (27 / 16);
     }
 
     &_small {
       @include text15;
 
-      line-height: (27/15);
+      line-height: (27 / 15);
 
       @include screen('sm') {
         @include text12;
 
-        line-height: (27/12);
+        line-height: (27 / 12);
       }
     }
   }
@@ -303,7 +333,7 @@
     opacity: 0;
     transition: opacity $ease-main;
 
-    #{$b}__main:checked~& {
+    #{$b}__main:checked ~ & {
       opacity: 1;
     }
   }
@@ -314,8 +344,7 @@
     width: 100%;
     padding-top: 50.3%;
 
-    &::before,
-    &::after {
+    &::before,&::after {
       @include pseudo;
 
       width: 100%;
@@ -349,18 +378,17 @@
     width: 100%;
     padding: 0 5px;
     color: $color-white;
-    line-height: (26/14);
+    line-height: (26 / 14);
     z-index: 3;
     flex: 1;
 
     @include screen('sm') {
       @include text10;
 
-      line-height: (26/14);
+      line-height: (26 / 14);
     }
 
     &_pt {
-
       #{$b}__hint-text {
         padding-top: 34px;
       }
