--- a/app/components/offer-short/offer-short.scss
+++ b/app/components/offer-short/offer-short.scss
@@ -156,8 +156,7 @@
       opacity: 0;
     }
 
-    .is-active #{$b}:not(.is-not-available) &,
-    .is-active #{$b}:hover:not(.is-not-available) & {
+    .is-active #{$b}:not(.is-not-available) &,.is-active #{$b}:hover:not(.is-not-available) & {
       @include screen('md') {
         opacity: 0;
       }
@@ -195,12 +194,7 @@
       }
     }
 
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6 {
+    h1,h2,h3,h4,h5,h6 {
       @include text-mid;
 
       font-weight: 700;
