--- a/app/components/side-navigation/side-navigation.scss
+++ b/app/components/side-navigation/side-navigation.scss
@@ -22,9 +22,7 @@
     padding-right: 12%;
   }
 
-  &__navigation,
-  &__info {
-
+  &__navigation,&__info {
     &:not(:last-child) {
       margin-bottom: 32px;
     }
@@ -48,8 +46,7 @@
     padding-bottom: 10px;
   }
 
-  .note,
-  &__links {
+  .note,&__links {
     margin-top: auto;
   }
 }
