fix issue14, issue13

--- a/app/blocks/dialog/dialog.pug
+++ b/app/blocks/dialog/dialog.pug
@@ -15,3 +15,18 @@ mixin dialog()
         +bubble('li', '15:45', "2018-10-27T15:45").__item Hello and welcome to Blooming Founders! How can i help you?
       +e.head
         +e.TIME.date(datetime="2018-10-27") 27 october 2018
+
+mixin dialog2()
+  +b.UL.dialog&attributes(attributes)
+    +e.LI.block
+      +e.UL.list
+        +bubble('li', '15:45', "2018-10-29T15:45")._bold.__item But we can discuss it. Maybe somehow charge you a little extra of you want to use the gym.
+      +e.head
+        +e.TIME.date(datetime="2018-10-29") Few minutes ago
+    +e.LI.block
+      +e.UL.list
+        +bubble('li', '15:45', "2018-10-27T15:45", true)._dark.__item I have ordered HOT DESK in your Building in East London. o the question is if i am able to have an access to your sports area when im ordering HOT DESK?
+        +bubble('li', '15:45', "2018-10-27T15:45", true)._dark.__item Hello. Well, let me think a little...
+      +e.UL.list
+        +bubble('li', '15:45', "2018-10-27T15:45").__item So, here’s is the point. We will open till 10-th of november. So you can visit the Co-working about 9-th of november. Go here see the space.
+        +bubble('li', '15:45', "2018-10-27T15:45").__item Hello and welcome to Blooming Founders! How can i help you?
