--- a/app/blocks/table-head/table-head.scss
+++ b/app/blocks/table-head/table-head.scss
@@ -52,7 +52,6 @@
     width: 100%;
 
     #{$b} {
-
       &__wrapper {
         display: flex;
         flex-wrap: wrap;
@@ -77,6 +76,12 @@
           padding-right: 25px;
         }
 
+        &_lead {
+          white-space: nowrap;
+          padding-right: 25px;
+          border-right: 1px solid $color-border-light;
+        }
+
         &_req-info {
           flex: 1;
           padding-right: 25px;
@@ -84,5 +89,11 @@
         }
       }
     }
+  }
+
+  &_borders {
+    border: 1px solid $color-border-light;
+    border-left-width: 0;
+    border-right-width: 0;
   }
 }
