--- a/app/blocks/message-form/message-form.scss
+++ b/app/blocks/message-form/message-form.scss
@@ -9,6 +9,10 @@
   border-left-width: 0;
   border-right-width: 0;
 
+  &_noborder {
+    border: none;
+  }
+
   :-ms-input-placeholder {
     color: $color-chat-placeholder;
   }
@@ -20,7 +24,7 @@
   &__wrapper {
     display: flex;
     justify-content: flex-start;
-    box-shadow: 1px 1px 8px rgba(34, 42, 46, 0.06);
+    box-shadow: 1px 1px 8px rgba(34, 42, 46, .06);
     border-radius: 21px;
     width: 100%;
   }
@@ -29,7 +33,7 @@
     @include text;
 
     font-weight: 400;
-    line-height: (26/14);
+    line-height: (26 / 14);
     border-radius: 21px 0 0 21px;
     border: 1px solid $color-border-light;
     border-right-width: 0;
