--- a/app/blocks/table-head/table-head.scss
+++ b/app/blocks/table-head/table-head.scss
@@ -63,6 +63,19 @@
         box-sizing: border-box;
         padding: 16px 20px 16px 0;
 
+        &_vp11 {
+          padding-top: 11px;
+          padding-bottom: 11px;
+        }
+
+        &_pr25 {
+          padding-right: 25px;
+        }
+
+        &_pl25 {
+          padding-left: 25px;
+        }
+
         &_sub {
           width: 47%;
         }
@@ -78,7 +91,6 @@
 
         &_lead {
           white-space: nowrap;
-          padding-right: 25px;
           border-right: 1px solid $color-border-light;
         }
 
@@ -92,8 +104,17 @@
   }
 
   &_borders {
+    margin-top: 0;
     border: 1px solid $color-border-light;
     border-left-width: 0;
     border-right-width: 0;
+  }
+
+  &__info {
+    flex: 1;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    flex-wrap: wrap;
   }
 }
