--- a/app/components/space-offer/space-offer.pug
+++ b/app/components/space-offer/space-offer.pug
@@ -1,5 +1,5 @@
 mixin space-offer()
-  +b.SECTION.space-offer&attributes(attributes)(data-deleted-object)
+  +b.SECTION.space-offer&attributes(attributes)(data-deleted-object data-callback="deleteOnBackend")
     block
 
 mixin space-offer-info()
