--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -101,6 +101,7 @@ include ../blocks/space-description/space-description
 include ../blocks/space-reservation/space-reservation
 include ../blocks/space/space
 include ../blocks/spoiler/spoiler
+include ../blocks/state/state
 include ../blocks/status/status
 include ../blocks/sticky-message/sticky-message
 include ../blocks/switch/switch
