--- a/app/pages/ui-kit/ui-kit.pug
+++ b/app/pages/ui-kit/ui-kit.pug
@@ -2183,6 +2183,22 @@ block content
         +ui-description .address-line с иконками
         +address-line({line: ['London', 'Kengsinton', 'W22EBF'], icons: [{ ico: 'metro', color: '#9b0158'}, {ico: 'metro', color: '#fed201'}]})
 
+    //- state
+    //- +ui-section
+    //-   +ui-section-head
+    //-     h2 state
+    //-     p Блок: block/state
+    //-   +ui-section-content
+    //-     +ui-description .state
+    //-     +state() Состояние
+    //-     +ui-description .state_right индикатор справа
+    //-     +state()._right состояние
+    //-       +link()(href="#") ссылка
+    //-     +ui-description .state_light
+    //-     +state()._light состояние
+    //-     +ui-description .state_fz18
+    //-     +state()._fz18 состояние
+
 block panels
   +main-menu
 
